styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: hsl(47, 88%, 63%);
  font-family: "figtree", sans-serif;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
}

/*BLOG CARD*/
#blog-card {
  flex: 1;
  display: flex;
  align-items: left;
  justify-content: flex-start;
  background-color: #ffff;
  flex-direction: column;
  margin: 0 auto;
  gap: 1.5rem;
  padding: 1.5rem;
  border-style: solid;
  border-color: hsl(0, 0%, 7%);
  border-radius: 15px;
  max-width: 400px;
  max-height: 550px;
}

#tag {
  background-color: hsl(47, 88%, 63%);
  border-radius: 3px;
  padding: 5px;
  display: flex;
  max-width: fit-content;
}
.thumbnail img {
  border-radius: 15px;
  display: flex;
  align-items: center;
  width: 100%;
  height: auto;
}

.author-thumbnail {
  display: flex;
  flex-direction: row;
  margin-top: auto;
  align-items: center;
  gap: 1rem;
}

.author-thumbnail img {
  width: 12%;
  height: auto;
  display: block;
}

/*TYPOGRAPHY*/
.tag-label,
h1,
.author {
  font-weight: bold;
  color: hsl(0, 0%, 7%);
}

.subtitle p {
  font-weight: 500px;
  color: hsl(0, 0%, 7%);
}
h1 {
  font-size: 24px;
  margin-top: 16px;
}
.description {
  margin-top: 16px;
  color: hsl(0, 0%, 42%);
  font-weight: 500px;
}

/*FOOTER*/
footer {
  padding: 1rem;
}
.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

